# SORT---Software-operation-and-Resource-Team

./: .env  .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  UNIFIED_SYSTEM_ANALYSIS.md  enhanced_cto_agent.py  frontend.py  index.html  requirements.txt  tailwind.config.js  test_deployment.py  test_qwen_ai.py  test_simple.py
Frontend Sim/: .gitignore  diagnostic_transformers.py  index.html
Frontend Sim/agents/: frontend_coder_agent.py  qwen_ai_service.py  testing_agent.py
Frontend Sim/backend/: fastapi_app.py
Frontend Sim/src/: App.tsx
Frontend Sim/templates/: auth_form_0.html  index.html
Frontend Sim/tests/: test_ecommerce_integration.py  test_enhanced_agents.py  test_social_media_unit.py  test_web_unit.py
agents/: __init__.py  agent_interface.py  backend_coder_agent.py  frontend_coder_agent.py  qwen_ai_service.py
agents/cto/: cto_agent.py
backend/: auth.py  models.py
coding_agents/: testing_agent.py
core/: config.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
protocols/: base_agent.py
setup/: HUGGINGFACE_SETUP.md  MINICPM_SETUP.md  QWEN_SETUP_GUIDE.md  qwen_config.md  setup.sh
sort/: README.md  pyproject.toml
sort/src/sort/: crew.py  main.py
src/: app.py  config.ts  index.css  index.html  main.py  web_ui.py
src/agents/: crew_agents.py
templates/: index.html
tests/: demo_qwen_ai.py  test_ecommerce_security.py  test_ecommerce_unit.py  test_hf_qwen.py  test_inventory_unit.py  test_social_media_integration.py  test_unified_efficiency.py  test_user_mgmt_unit.py  test_web_integration.py
(+33 files in other folders)
