[project]
name = "sort"
version = "0.1.0"
description = "SORT using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "langchain>=0.2.0",
    "PyGithub>=2.3.0",
    "requests>=2.31.0",
]

[project.scripts]
sort = "sort.main:run"
run_crew = "sort.main:run"
train = "sort.main:train"
replay = "sort.main:replay"
test = "sort.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
